Bug 467890 - On Wayland, when taking a no-delay rectangular region or full screen screenshot from the main window, a ghost of the main window can appear in the screenshot when using a slower-than-normal global animation speed
Summary: On Wayland, when taking a no-delay rectangular region or full screen screensh...
Status: RESOLVED FIXED
Alias: None
Product: Spectacle
Classification: Applications
Component: General (other bugs)
Version First Reported In: 23.03.80
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Boudhayan Gupta
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-03-28 17:39 UTC by Nate Graham
Modified: 2023-11-14 06:35 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2023-03-28 17:39:44 UTC
STEPS TO REPRODUCE
1. Be in a Wayland session
2. Reduce the global animation speed in System Settings > Quick Settings page > Animation speed slider
3. Launch Spectacle
4. With Spectacle's main window open, take a rectangular region or full screen screenshot


OBSERVED RESULT
The main window fades out, but does not fade out fast enough to avoid a ghostly transparent version of it appearing in the screenshot


EXPECTED RESULT
The screenshot is taken only once the main window's close animation has finished playing


ADDITIONAL INFORMATION
Can be worked around by using the standard animation duration or a faster one, or by setting any delay value. Even a 0.1 second delay is enough for me.
Comment 1 Bug Janitor Service 2023-04-11 16:41:53 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/3961
Comment 2 Noah Davis 2023-04-11 19:23:12 UTC
Git commit 616783d892db0410497356409698a81311610fc6 by Noah Davis.
Committed on 11/04/2023 at 19:11.
Pushed by ndavis into branch 'master'.

Blacklist Spectacle for all window open/close effects

Spectacle needs to be blacklisted in order to stay out of its own
screenshots.
Related: bug 463105, bug 465784

M  +5    -1    src/effects/fade/package/contents/code/main.js
M  +3    -0    src/effects/glide/glide.cpp
M  +5    -1    src/effects/scale/package/contents/code/main.js

https://invent.kde.org/plasma/kwin/commit/616783d892db0410497356409698a81311610fc6
Comment 3 Noah Davis 2023-04-11 19:23:42 UTC
Git commit b090a7cc9e3b2a70e88c47b5fb6add8599bc7c0d by Noah Davis.
Committed on 11/04/2023 at 19:23.
Pushed by ndavis into branch 'Plasma/5.27'.

Blacklist Spectacle for all window open/close effects

Spectacle needs to be blacklisted in order to stay out of its own
screenshots.
Related: bug 463105, bug 465784


(cherry picked from commit 616783d892db0410497356409698a81311610fc6)

M  +5    -1    src/effects/fade/package/contents/code/main.js
M  +3    -0    src/effects/glide/glide.cpp
M  +5    -1    src/effects/scale/package/contents/code/main.js

https://invent.kde.org/plasma/kwin/commit/b090a7cc9e3b2a70e88c47b5fb6add8599bc7c0d