Blacklist Spectacle for all window open/close effects

Spectacle needs to be blacklisted in order to stay out of its own
screenshots.

BUG: 467890
BUG: 463105
CCBUG: 465784