src/effects/fade/package/contents/code/main.js
@@ -15,7 +15,11 @@ const blacklist = [
     "ksmserver-logout-greeter ksmserver-logout-greeter",
 
     // The splash screen has to be animated only by the login effect.
-    "ksplashqml ksplashqml"
+    "ksplashqml ksplashqml",
+
+    // Spectacle needs to be blacklisted in order to stay out of its own screenshots.
+    "spectacle spectacle", // x11
+    "spectacle org.kde.spectacle", // wayland
 ];
 
 class FadeEffect {
